--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="row center-align">
         <div class="col s2 m2">
 
-          <div id="animation_container" style="background-color:rgba(255, 255, 255, 0.00); width:371px; height:186px">
+          <div id="animation_container" style="background-color:rgba(255, 255, 255, 0.00); width:371px; height:186px; margin-left: 20px;">
             <canvas id="canvas" width="371" height="186" style="position: absolute; display: block; background-color:rgba(255, 255, 255, 0.00);"></canvas>
             <div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:371px; height:186px; position: absolute; left: 0px; top: 0px; display: block;">
             </div>
