--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 
 
 
-    <div class="section" style="width: 100vw;height: 100vh;">
+    <div class="section scrollspy" style="width: 100vw;height: 100vh;" id="instrument-block">
       <div class="row center-align">
         <div class="col s12 m12 carouseli">
 
-          <div class="carousel scrollspy" id="instrument-block">
+          <div class="carousel">
             <a class="carousel-item" href="#one!">
               <div class="card-panel hoverable">
                 <div class="card-content white-text">
@@ -201,7 +201,18 @@
 
 
         </div></div>
-    </div></div>
+    </div>
+
+    <div class="section" id="third-block" style="width: 100vw;height: 100vh;">
+      <div class="row center-align">
+        <div class="col s6 m6" style="background:teal; opacity: 0.6;height: 100vh;">
+
+        </div>
+        <div class="col s6 m6">
+
+        </div>
+      </div>
+    </div>
 
 
 
