--- a/index.html
+++ b/index.html
@@ -136,10 +136,12 @@
 
     <div class="section scrollspy" style="width: 100vw;height: 100vh;" id="instrument-block">
       <div class="row center-align">
+        <div class="col s12 m12">
+          <span id="project-title"></span>
+        </div>
         <div class="col s12 m12 carouseli">
-
           <div class="carousel">
-            <a class="carousel-item" href="#one!">
+            <a class="carousel-item" href="#one!" data-title="Osvita">
               <div class="card-panel hoverable">
                 <div class="card-content white-text">
                   <span class="card-title">Osvita</span>
@@ -150,7 +152,7 @@
                 </div>
                 
               </div></a>
-            <a class="carousel-item" href="#two!">
+            <a class="carousel-item" href="#two!" data-title="KYIVAPP">
                 <div class="card-panel hoverable">
                     <div class="card-content white-text">
                       <span class="card-title">KYIVAPP</span>
@@ -158,7 +160,7 @@
                     </div>
                   </div>
             </a>
-            <a class="carousel-item" href="#three!">
+            <a class="carousel-item" href="#three!" data-title="Громадський бюджет">
                 <div class="card-panel hoverable">
                     <div class="card-content white-text">
                       <span class="card-title">Громадський бюджет</span>
@@ -209,7 +211,24 @@
 
         </div>
         <div class="col s6 m6">
-
+          <div class="row center-align">
+            <div class="col s4 m4 offset-s4 offset-m4">
+            <div class="about-circle-one" style="margin-top: 40px;"></div>
+          </div>
+          <div class="col s4 m4"></div>
+          </div>
+          <div class="row center-align">
+            <div class="col s4 m4 offset-s4 offset-m4">
+            <div class="about-circle-one"></div>
+          </div>
+          <div class="col s4 m4"></div>
+          </div>
+          <div class="row center-align">
+            <div class="col s4 m4 offset-s4 offset-m4">
+            <div class="about-circle-one"></div>
+          </div>
+          <div class="col s4 m4"></div>
+          </div>
         </div>
       </div>
     </div>
