--- a/index.html
+++ b/index.html
@@ -211,21 +211,21 @@
 
         </div>
         <div class="col s6 m6">
-          <div class="row center-align">
+          <div class="row center-align" id="aboutOne">
             <div class="col s4 m4 offset-s4 offset-m4">
-            <div class="about-circle-one" style="margin-top: 40px;"></div>
+            <div class="about-circle-one" style="margin-top: 60px;"></div>
           </div>
           <div class="col s4 m4"></div>
           </div>
-          <div class="row center-align">
+          <div class="row center-align" id="aboutTwo">
             <div class="col s4 m4 offset-s4 offset-m4">
-            <div class="about-circle-one"></div>
+            <div class="about-circle-two"></div>
           </div>
           <div class="col s4 m4"></div>
           </div>
-          <div class="row center-align">
+          <div class="row center-align" id="aboutThree">
             <div class="col s4 m4 offset-s4 offset-m4">
-            <div class="about-circle-one"></div>
+            <div class="about-circle-three"></div>
           </div>
           <div class="col s4 m4"></div>
           </div>
