--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <div class="col s4 l4"><div class="screen-instance"></div><div class="screen-instance-false"></div></div>
     <div class="col s2 l2" id="link"><a id="link-one" href="#main-block" rel='m_PageScroll2id'>Головна</a></div>
     <div class="col s2 l2" id="link"><a id="link-two" href="#instrument-block" rel='m_PageScroll2id'>Наші проекти</a></div>
-    <div class="col s4 l4 right-align"><a class="modal-trigger" id="link-contact" href="#modal1">Контакти</a></div>
+    <div class="col s2 l2" id="link"><a id="link-three" href="#third-block" rel='m_PageScroll2id'>Про нас</a></div>
+    <div class="col s2 l2 right-align"><a class="modal-trigger" id="link-contact" href="#modal1">Контакти</a></div>
   </div>
   </div>
 
@@ -207,14 +208,14 @@
 
     <div class="section" id="third-block" style="width: 100vw;height: 100vh;">
       <div class="row center-align">
-        <div class="col s6 m6" style="background:teal; opacity: 0.6;height: 100vh;">
+        <div class="col s6 m6" style="background:teal; opacity: 0.6;height: 85vh;">
           <div class="content " id="contentAboutOne" style="visibility: hidden;">
           </div>
         </div>
-        <div class="col s6 m6">
+        <div class="col s6 m6" style="height: 100vh;">
           <div class="row center-align" id="aboutOne">
             <div class="col s4 m4 offset-s4 offset-m4">
-            <div class="about-circle-one" style="margin-top: 60px;"></div>
+            <div class="about-circle-one"></div>
           </div>
           <div class="col s4 m4"></div>
           </div>
